#1 created load function and added functionality to load individual excel sheets

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import json\n",
-    "import os"
+    "import os\n",
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +27,8 @@
     "    - encoding (str): Encoding to be used for reading the file. Default is 'utf-8'.\n",
     "    \n",
     "    Returns:\n",
-    "    - DataFrame: Loaded data as a pandas DataFrame.\n",
+    "    - dict or DataFrame: A dictionary of DataFrames with keys being sheet names for Excel files,\n",
+    "                         or a single DataFrame for other file types.\n",
     "    \"\"\"\n",
     "    if not os.path.exists(file_path):\n",
     "        raise FileNotFoundError(f\"The file at {file_path} does not exist.\")\n",
@@ -36,12 +38,14 @@
     "    try:\n",
     "        if file_extension == '.csv':\n",
     "            data = pd.read_csv(file_path, encoding=encoding)\n",
+    "            data.columns = data.columns.str.lower()\n",
     "        elif file_extension in ['.xls', '.xlsx']:\n",
-    "            data = pd.read_excel(file_path)\n",
+    "            data = pd.read_excel(file_path, sheet_name=None)\n",
     "        elif file_extension == '.json':\n",
     "            with open(file_path, 'r', encoding=encoding) as f:\n",
     "                json_data = json.load(f)\n",
     "            data = pd.json_normalize(json_data)\n",
+    "            data.columns = data.columns.str.lower()\n",
     "        elif file_extension == '.parquet':\n",
     "            data = pd.read_parquet(file_path)\n",
     "        else:\n",
@@ -51,23 +55,42 @@
     "    except Exception as e:\n",
     "        raise ValueError(f\"Error loading the file: {e}\")\n",
     "    \n",
-    "    return data"
+    "    return data\n",
+    "\n",
+    "def sanitize_sheet_name(sheet_name):\n",
+    "    \"\"\"\n",
+    "    Sanitize the sheet name to be a valid Python variable name and convert to lowercase.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    - sheet_name (str): Original sheet name.\n",
+    "    \n",
+    "    Returns:\n",
+    "    - str: Sanitized sheet name.\n",
+    "    \"\"\"\n",
+    "    return re.sub(r'\\W|^(?=\\d)', '_', sheet_name.lower())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# path = r\"D:\\College\\Academics\\Extra\\Datasets\\daily-total-female-births.csv\"\n",
-    "# path = r\"D:\\College\\Academics\\Extra\\Datasets\\3 - Beverage Sales Dataset.xlsx\"\n",
-    "# path = r\"D:\\College\\Academics\\SEM 4\\New Generation Database\\Datasets\\playstore.json\""
+    "# path = r\"D:\\College\\Academics\\Extra\\Datasets\\test.xlsx\"\n",
+    "path = r\"D:\\College\\Academics\\SEM 4\\New Generation Database\\Datasets\\playstore.json\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Helper Code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -91,125 +114,151 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>Unnamed: 1</th>\n",
-       "      <th>Unnamed: 2</th>\n",
+       "      <th>app</th>\n",
+       "      <th>category</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>reviews</th>\n",
+       "      <th>size</th>\n",
+       "      <th>installs</th>\n",
+       "      <th>type</th>\n",
+       "      <th>price</th>\n",
+       "      <th>content rating</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>last updated</th>\n",
+       "      <th>current ver</th>\n",
+       "      <th>android ver</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Photo Editor &amp; Candy Camera &amp; Grid &amp; ScrapBook</td>\n",
+       "      <td>ART_AND_DESIGN</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>159</td>\n",
+       "      <td>19M</td>\n",
+       "      <td>10,000+</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Everyone</td>\n",
+       "      <td>Art &amp; Design</td>\n",
+       "      <td>January 7, 2018</td>\n",
+       "      <td>1.0.0</td>\n",
+       "      <td>4.0.3 and up</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Power BI Dataset</td>\n",
+       "      <td>Coloring book moana</td>\n",
+       "      <td>ART_AND_DESIGN</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>967</td>\n",
+       "      <td>14M</td>\n",
+       "      <td>500,000+</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Everyone</td>\n",
+       "      <td>Art &amp; Design;Pretend Play</td>\n",
+       "      <td>January 15, 2018</td>\n",
+       "      <td>2.0.0</td>\n",
+       "      <td>4.0.3 and up</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>U Launcher Lite – FREE Live Cool Themes, Hide ...</td>\n",
+       "      <td>ART_AND_DESIGN</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>87510</td>\n",
+       "      <td>8.7M</td>\n",
+       "      <td>5,000,000+</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Everyone</td>\n",
+       "      <td>Art &amp; Design</td>\n",
+       "      <td>August 1, 2018</td>\n",
+       "      <td>1.2.4</td>\n",
+       "      <td>4.0.3 and up</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Sketch - Draw &amp; Paint</td>\n",
+       "      <td>ART_AND_DESIGN</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>215644</td>\n",
+       "      <td>25M</td>\n",
+       "      <td>50,000,000+</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Teen</td>\n",
+       "      <td>Art &amp; Design</td>\n",
+       "      <td>June 8, 2018</td>\n",
+       "      <td>Varies with device</td>\n",
+       "      <td>4.2 and up</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Get 10% OFF our course using coupon code EMAIL10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Get Our Power BI Course</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Made by Career Principles Ltd.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Note</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>All content is copyright material of Career Pr...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>This Excel model may not be reproduced or dist...</td>\n",
+       "      <td>Pixel Draw - Number Art Coloring Book</td>\n",
+       "      <td>ART_AND_DESIGN</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>967</td>\n",
+       "      <td>2.8M</td>\n",
+       "      <td>100,000+</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Everyone</td>\n",
+       "      <td>Art &amp; Design;Creativity</td>\n",
+       "      <td>June 20, 2018</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>4.4 and up</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Unnamed: 0  Unnamed: 1                                         Unnamed: 2\n",
-       "0          NaN         NaN                                                NaN\n",
-       "1          NaN         NaN                                   Power BI Dataset\n",
-       "2          NaN         NaN                                                NaN\n",
-       "3          NaN         NaN                                                NaN\n",
-       "4          NaN         NaN                                                NaN\n",
-       "5          NaN         NaN   Get 10% OFF our course using coupon code EMAIL10\n",
-       "6          NaN         NaN                                                NaN\n",
-       "7          NaN         NaN                            Get Our Power BI Course\n",
-       "8          NaN         NaN                                                NaN\n",
-       "9          NaN         NaN                     Made by Career Principles Ltd.\n",
-       "10         NaN         NaN                                                NaN\n",
-       "11         NaN         NaN                                               Note\n",
-       "12         NaN         NaN  All content is copyright material of Career Pr...\n",
-       "13         NaN         NaN  This Excel model may not be reproduced or dist..."
+       "                                                 app        category rating  \\\n",
+       "0     Photo Editor & Candy Camera & Grid & ScrapBook  ART_AND_DESIGN    4.1   \n",
+       "1                                Coloring book moana  ART_AND_DESIGN    3.9   \n",
+       "2  U Launcher Lite – FREE Live Cool Themes, Hide ...  ART_AND_DESIGN    4.7   \n",
+       "3                              Sketch - Draw & Paint  ART_AND_DESIGN    4.5   \n",
+       "4              Pixel Draw - Number Art Coloring Book  ART_AND_DESIGN    4.3   \n",
+       "\n",
+       "  reviews  size     installs  type price content rating  \\\n",
+       "0     159   19M      10,000+  Free     0       Everyone   \n",
+       "1     967   14M     500,000+  Free     0       Everyone   \n",
+       "2   87510  8.7M   5,000,000+  Free     0       Everyone   \n",
+       "3  215644   25M  50,000,000+  Free     0           Teen   \n",
+       "4     967  2.8M     100,000+  Free     0       Everyone   \n",
+       "\n",
+       "                      genres      last updated         current ver  \\\n",
+       "0               Art & Design   January 7, 2018               1.0.0   \n",
+       "1  Art & Design;Pretend Play  January 15, 2018               2.0.0   \n",
+       "2               Art & Design    August 1, 2018               1.2.4   \n",
+       "3               Art & Design      June 8, 2018  Varies with device   \n",
+       "4    Art & Design;Creativity     June 20, 2018                 1.1   \n",
+       "\n",
+       "    android ver  \n",
+       "0  4.0.3 and up  \n",
+       "1  4.0.3 and up  \n",
+       "2  4.0.3 and up  \n",
+       "3    4.2 and up  \n",
+       "4    4.4 and up  "
       ]
      },
-     "execution_count": 24,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "load_data(path)"
+    "#reading csv or json\n",
+    "df = load_data(path)\n",
+    "display(df.head())\n",
+    "\n",
+    "# excel_data = load_data(path)\n",
+    "# for sheet_name, df in excel_data.items():\n",
+    "#     sanitized_name = sanitize_sheet_name(sheet_name)\n",
+    "#     globals()[sanitized_name] = df\n",
+    "#     print(f\"DataFrame '{sanitized_name}' created:\")\n",
+    "#     display(globals()[sanitized_name].head())"
    ]
   },
   {
