--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,13 +72,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# path = r\"D:\\College\\Academics\\Extra\\Datasets\\daily-total-female-births.csv\"\n",
+    "def check_df(dataframe, head=5):\n",
+    "    \"\"\"\n",
+    "    Function to check basic characteristics of a DataFrame.\n",
+    "\n",
+    "    Parameters:\n",
+    "    ----------\n",
+    "    - dataframe: pandas.core.DataFrame\n",
+    "        DataFrame to be checked.\n",
+    "    - head: int\n",
+    "        Number of rows to display from the beginning and end of the DataFrame.\n",
+    "\n",
+    "    Returns:\n",
+    "    -------\n",
+    "    None\n",
+    "\n",
+    "    Example Usage:\n",
+    "    --------------\n",
+    "    check_df(df, head=10)\n",
+    "    \"\"\"\n",
+    "    print(\"################## Shape ####################\")\n",
+    "    print(dataframe.shape)\n",
+    "    print(\"################## Types ####################\")\n",
+    "    print(dataframe.dtypes)\n",
+    "    print(\"################## Head ####################\")\n",
+    "    display(dataframe.head(head))\n",
+    "    print(\"################## Tail ####################\")\n",
+    "    display(dataframe.tail(head))\n",
+    "    print(\"################## NA ####################\")\n",
+    "    print(dataframe.isnull().sum())\n",
+    "    print(\"################## Quantiles ####################\")\n",
+    "    display(dataframe.describe([0.05, 0.10, 0.25, 0.40, 0.50, 0.60, 0.75, 0.90, 0.95]).T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = r\"D:\\College\\Academics\\Extra\\Datasets\\daily-total-female-births.csv\"\n",
     "# path = r\"D:\\College\\Academics\\Extra\\Datasets\\test.xlsx\"\n",
-    "path = r\"D:\\College\\Academics\\SEM 4\\New Generation Database\\Datasets\\playstore.json\""
+    "# path = r\"D:\\College\\Academics\\SEM 4\\New Generation Database\\Datasets\\playstore.json\""
    ]
   },
   {
@@ -90,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -114,134 +153,47 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>app</th>\n",
-       "      <th>category</th>\n",
-       "      <th>rating</th>\n",
-       "      <th>reviews</th>\n",
-       "      <th>size</th>\n",
-       "      <th>installs</th>\n",
-       "      <th>type</th>\n",
-       "      <th>price</th>\n",
-       "      <th>content rating</th>\n",
-       "      <th>genres</th>\n",
-       "      <th>last updated</th>\n",
-       "      <th>current ver</th>\n",
-       "      <th>android ver</th>\n",
+       "      <th>date</th>\n",
+       "      <th>births</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Photo Editor &amp; Candy Camera &amp; Grid &amp; ScrapBook</td>\n",
-       "      <td>ART_AND_DESIGN</td>\n",
-       "      <td>4.1</td>\n",
-       "      <td>159</td>\n",
-       "      <td>19M</td>\n",
-       "      <td>10,000+</td>\n",
-       "      <td>Free</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Everyone</td>\n",
-       "      <td>Art &amp; Design</td>\n",
-       "      <td>January 7, 2018</td>\n",
-       "      <td>1.0.0</td>\n",
-       "      <td>4.0.3 and up</td>\n",
+       "      <td>1959-01-01</td>\n",
+       "      <td>35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Coloring book moana</td>\n",
-       "      <td>ART_AND_DESIGN</td>\n",
-       "      <td>3.9</td>\n",
-       "      <td>967</td>\n",
-       "      <td>14M</td>\n",
-       "      <td>500,000+</td>\n",
-       "      <td>Free</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Everyone</td>\n",
-       "      <td>Art &amp; Design;Pretend Play</td>\n",
-       "      <td>January 15, 2018</td>\n",
-       "      <td>2.0.0</td>\n",
-       "      <td>4.0.3 and up</td>\n",
+       "      <td>1959-01-02</td>\n",
+       "      <td>32</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>U Launcher Lite – FREE Live Cool Themes, Hide ...</td>\n",
-       "      <td>ART_AND_DESIGN</td>\n",
-       "      <td>4.7</td>\n",
-       "      <td>87510</td>\n",
-       "      <td>8.7M</td>\n",
-       "      <td>5,000,000+</td>\n",
-       "      <td>Free</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Everyone</td>\n",
-       "      <td>Art &amp; Design</td>\n",
-       "      <td>August 1, 2018</td>\n",
-       "      <td>1.2.4</td>\n",
-       "      <td>4.0.3 and up</td>\n",
+       "      <td>1959-01-03</td>\n",
+       "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Sketch - Draw &amp; Paint</td>\n",
-       "      <td>ART_AND_DESIGN</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>215644</td>\n",
-       "      <td>25M</td>\n",
-       "      <td>50,000,000+</td>\n",
-       "      <td>Free</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Teen</td>\n",
-       "      <td>Art &amp; Design</td>\n",
-       "      <td>June 8, 2018</td>\n",
-       "      <td>Varies with device</td>\n",
-       "      <td>4.2 and up</td>\n",
+       "      <td>1959-01-04</td>\n",
+       "      <td>31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Pixel Draw - Number Art Coloring Book</td>\n",
-       "      <td>ART_AND_DESIGN</td>\n",
-       "      <td>4.3</td>\n",
-       "      <td>967</td>\n",
-       "      <td>2.8M</td>\n",
-       "      <td>100,000+</td>\n",
-       "      <td>Free</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Everyone</td>\n",
-       "      <td>Art &amp; Design;Creativity</td>\n",
-       "      <td>June 20, 2018</td>\n",
-       "      <td>1.1</td>\n",
-       "      <td>4.4 and up</td>\n",
+       "      <td>1959-01-05</td>\n",
+       "      <td>44</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                 app        category rating  \\\n",
-       "0     Photo Editor & Candy Camera & Grid & ScrapBook  ART_AND_DESIGN    4.1   \n",
-       "1                                Coloring book moana  ART_AND_DESIGN    3.9   \n",
-       "2  U Launcher Lite – FREE Live Cool Themes, Hide ...  ART_AND_DESIGN    4.7   \n",
-       "3                              Sketch - Draw & Paint  ART_AND_DESIGN    4.5   \n",
-       "4              Pixel Draw - Number Art Coloring Book  ART_AND_DESIGN    4.3   \n",
-       "\n",
-       "  reviews  size     installs  type price content rating  \\\n",
-       "0     159   19M      10,000+  Free     0       Everyone   \n",
-       "1     967   14M     500,000+  Free     0       Everyone   \n",
-       "2   87510  8.7M   5,000,000+  Free     0       Everyone   \n",
-       "3  215644   25M  50,000,000+  Free     0           Teen   \n",
-       "4     967  2.8M     100,000+  Free     0       Everyone   \n",
-       "\n",
-       "                      genres      last updated         current ver  \\\n",
-       "0               Art & Design   January 7, 2018               1.0.0   \n",
-       "1  Art & Design;Pretend Play  January 15, 2018               2.0.0   \n",
-       "2               Art & Design    August 1, 2018               1.2.4   \n",
-       "3               Art & Design      June 8, 2018  Varies with device   \n",
-       "4    Art & Design;Creativity     June 20, 2018                 1.1   \n",
-       "\n",
-       "    android ver  \n",
-       "0  4.0.3 and up  \n",
-       "1  4.0.3 and up  \n",
-       "2  4.0.3 and up  \n",
-       "3    4.2 and up  \n",
-       "4    4.4 and up  "
+       "         date  births\n",
+       "0  1959-01-01      35\n",
+       "1  1959-01-02      32\n",
+       "2  1959-01-03      30\n",
+       "3  1959-01-04      31\n",
+       "4  1959-01-05      44"
       ]
      },
      "metadata": {},
@@ -259,6 +211,251 @@
     "#     globals()[sanitized_name] = df\n",
     "#     print(f\"DataFrame '{sanitized_name}' created:\")\n",
     "#     display(globals()[sanitized_name].head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "################## Shape ####################\n",
+      "(365, 2)\n",
+      "################## Types ####################\n",
+      "date      object\n",
+      "births     int64\n",
+      "dtype: object\n",
+      "################## Head ####################\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>births</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1959-01-01</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1959-01-02</td>\n",
+       "      <td>32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1959-01-03</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1959-01-04</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1959-01-05</td>\n",
+       "      <td>44</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         date  births\n",
+       "0  1959-01-01      35\n",
+       "1  1959-01-02      32\n",
+       "2  1959-01-03      30\n",
+       "3  1959-01-04      31\n",
+       "4  1959-01-05      44"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "################## Tail ####################\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>births</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>360</th>\n",
+       "      <td>1959-12-27</td>\n",
+       "      <td>37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>361</th>\n",
+       "      <td>1959-12-28</td>\n",
+       "      <td>52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>362</th>\n",
+       "      <td>1959-12-29</td>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>363</th>\n",
+       "      <td>1959-12-30</td>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>364</th>\n",
+       "      <td>1959-12-31</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           date  births\n",
+       "360  1959-12-27      37\n",
+       "361  1959-12-28      52\n",
+       "362  1959-12-29      48\n",
+       "363  1959-12-30      55\n",
+       "364  1959-12-31      50"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "################## NA ####################\n",
+      "date      0\n",
+      "births    0\n",
+      "dtype: int64\n",
+      "################## Quantiles ####################\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>5%</th>\n",
+       "      <th>10%</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>40%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>60%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>90%</th>\n",
+       "      <th>95%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>births</th>\n",
+       "      <td>365.0</td>\n",
+       "      <td>41.980822</td>\n",
+       "      <td>7.348257</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>33.4</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>51.6</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>73.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        count       mean       std   min    5%   10%   25%   40%   50%   60%  \\\n",
+       "births  365.0  41.980822  7.348257  23.0  31.0  33.4  37.0  40.0  42.0  44.0   \n",
+       "\n",
+       "         75%   90%   95%   max  \n",
+       "births  46.0  51.6  55.0  73.0  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "check_df(df)"
    ]
   },
   {
